dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: dashboard-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
        - host: dashboard.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: kubernetes-dashboard
                            port:
                                number: 80
